force-app/main/default/objects/Conferenza__c/fields/Data_Fine__c.field-meta.xml
<CustomField>
    <fullName>Data_Fine__c</fullName>
    <label>Data Fine</label>
    <type>DateTime</type>
</CustomField>