force-app/main/default/objects/Conferenza__c/fields/Indirizzo__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo__c</fullName>
    <label>Indirizzo</label>
    <type>TextArea</type>
</CustomField>