force-app/main/default/objects/Conferenza__c/fields/Nome_Relatore__c.field-meta.xml
<CustomField>
    <fullName>Nome_Relatore__c</fullName>
    <label>Nome Relatore</label>
    <type>TextArea</type>
</CustomField>