force-app/main/default/objects/Conferenza__c/fields/Relatore__c.field-meta.xml
<CustomField>
    <fullName>Relatore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relatore</label>
    <referenceTo>Relatore__c</referenceTo>
    <relationshipLabel>Conferenze</relationshipLabel>
    <relationshipName>Conferenze</relationshipName>
    <type>Lookup</type>
</CustomField>