force-app/main/default/objects/Conferenza__c/fields/Stanza__c.field-meta.xml
<CustomField>
    <fullName>Stanza__c</fullName>
    <label>Stanza</label>
    <type>TextArea</type>
</CustomField>